fikset link til welearn.codes

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -184,7 +184,7 @@ var commands = {
 		addLine("You will be redirected in 5 sec.", 'margin');
 		setTimeout(function(){
 		alert("Perfect! Nice work! Press OK to continue to next step.");
-		window.location.href = "http://localhost/e-learning/Steg/commit.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/commit.php";
 	},5000);
 		/*addLine(' (use git commit -m "Added new file" to commit and continue to next step) ');*/
 	},
@@ -192,7 +192,7 @@ var commands = {
 		'echo "This is one line" >> test.txt': function (){
 		addLine("You now added one line to the file test.txt");
 		alert("Success! You now added one line to the file test.txt. Press OK to continue to next step.")
-		window.location.href = "http://localhost/e-learning/Steg/add.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/add.php";
 
 	},
 
@@ -202,7 +202,7 @@ var commands = {
 
 			'git add test.txt': function (){
 		alert("Success! You now added the file test.txt to the staging area. Press OK to continue to next step.")
-		window.location.href = "http://localhost/e-learning/Steg/status.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/status.php";
 	},
 
 		'git commit -m "Added new file"': function (){
@@ -212,7 +212,7 @@ var commands = {
 		addLine("<br>You will redirected in 5 sec.",'margin');
 		setTimeout(function(){
 		alert("Awesome!! You did your first commit! Now you need to push your changes to GitHub. Press OK to do this in the next step.");
-		window.location.href = "http://localhost/e-learning/Steg/push.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/push.php";
 	},5000);
 	},
 
@@ -227,7 +227,7 @@ var commands = {
 		addLine("<br>You will redirected in 5 sec.",'margin');
 		setTimeout(function(){
 		alert("Success! You pushed your changes to GitHub! Nice work! Press OK to continue to the next step.");
-		window.location.href = "http://localhost/e-learning/Steg/pull.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/pull.php";
 	},5000);
 	},
 
@@ -241,7 +241,7 @@ var commands = {
 		addLine("<br>You will redirected in 5 sec.",'margin');
 		setTimeout(function(){
 		alert("Perfecto! You just pulled your teams last changes from GitHub! Nice work! Press OK to continue to the next step and learn to clone a Git repository.");
-		window.location.href = "http://localhost/e-learning/Steg/clone.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/clone.php";
 	},5000);
 	},
 
@@ -256,7 +256,7 @@ var commands = {
 		addLine("<br>You will redirected in 5 sec.",'margin');
 		setTimeout(function(){
 		alert("Perfecto! You just pulled your teams last changes from GitHub! Nice work! Press OK to continue to the next step and learn to clone a Git repository.");
-		window.location.href = "http://localhost/e-learning/Steg/ferdig.php";
+		window.location.href = "http://welearn.codes/e-learning/Steg/ferdig.php";
 	},5000);
 	},
 
