--- a/html/header.html
+++ b/html/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title><?php echo $title; ?></title>
-    <base href="http://localhost/e-learning/" target="_self" /> <!--se denne siden vis problemer http://stackoverflow.com/questions/1889076/is-it-recommended-to-use-the-base-html-tag -->
+    <base href="http://welearn.codes/e-learning/" target="_self" /> <!--se denne siden vis problemer http://stackoverflow.com/questions/1889076/is-it-recommended-to-use-the-base-html-tag -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
     <link href="./css/cssConsole.console.css" type="text/css" rel="stylesheet">
