--- a/html/footer.html
+++ b/html/footer.html
@@ -1,10 +1,10 @@
-<!---</main>-->
-<!---<footer id="footer" class="navbar navbar-default navbar-fixed-bottom">-->
-<!---<div class="navbar-text pull-left">-->
-<!---<p>-->
-<!---Testing-->
-<!---</p>-->
-<!---</div>-->
-<!---</footer>-->
-<!---</body>-->
-<!---</html>-->
+</div>
+<footer class="footer" id="footer">
+      
+        <p class="text-muted text-center">Obligatorisk oppgave i INT-1000 - Gruppe 8 - Høgskolen i Sørøst-Norge</p>
+
+     
+    </footer>
+
+</body>
+</html>
