--- a/html/git-add.html
+++ b/html/git-add.html
@@ -1,30 +1,3 @@
-<body>
-	<header class=navbar-default>
-	<div class="container-fluid">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	      <span class="sr-only">Toggle navigation</span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	    <a class="navbar-brand" href="#">Git E-learning</a>
-	  </div>
-
-	  	<!-- Collect the nav links, forms, and other content for toggling -->
-	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav">
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
-		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">add<span class="sr-only">(current)</span></a></li>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
-	 	</div><!-- /.navbar-collapse -->
-	</header>  
-</body>
 
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
@@ -36,14 +9,7 @@
 
 		<p>Once you are finished editing your files you are ready to add them you your git repository.</p>
 		<p>This is done using the "git add" command.</p>
-
-		<pre>
-		Ex:
-		git add test.txt 	/* adds the specified file */
-		git add .  			/* adds all the modified files in your directory */
-		git add *.txt 		/* add all .txt files in your directory */
-		</pre>
-
-		<p>Once you have added the files you can do "git status" and they will show up as green.</p>
+		<strong><em>To continue, type:</em></strong>
+		<pre>git add test.txt 	/* adds the specified file */</pre>
 	</div>
 </div>
