--- a/html/git-pull.html
+++ b/html/git-pull.html
@@ -1,31 +1,3 @@
-<body>
-	<header class=navbar-default>
-	<div class="container-fluid">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	      <span class="sr-only">Toggle navigation</span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	    <a class="navbar-brand" href="#">Git E-learning</a>
-	  </div>
-
-	  	<!-- Collect the nav links, forms, and other content for toggling -->
-	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav">
-		      <ul class="nav navbar-nav">
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">add</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
-		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">pull<span class="sr-only">(current)</span></a></li>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
-	 	</div><!-- /.navbar-collapse -->
-	</header>  
-</body>
 
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
@@ -36,7 +8,7 @@
 		<p>When you have added your repositry to git you will have the option to pull changes. This comes in handy
 		when other colabirators have added code to your repository.</p>
 
-		<p>Ex:</p>
+		<strong><em>Try this in terminal:</em></strong>
 		<pre>git pull</pre>
 
 		<p>The added code will the be merged with your files.</p>
