--- a/html/main.html
+++ b/html/main.html
@@ -13,36 +13,7 @@
         </form>
     </div> -->
 
-  <body>
-  <header class=navbar-default>
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Git E-learning</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">add</a>
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
-          <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
-       </div><!-- /.navbar-collapse -->
-  </header>  
-  </body>
   
-
-
 
     <div class="container">
 
@@ -50,28 +21,29 @@
         <div class="col-sm-12"><h1 class="text-center">Information about GitHub</h1></div>
         <div class="col-sm-6">
           <hr>
-          <p>Git is a community built on Git, an open source project started by Linux creator Linus Torvalds. a trainer at GitHub, explains that Git, like other version control systems, manages and stores revisions of projects.</p>
+          <p>GitHub is a community built on Git, an open source project started by Linux creator Linus Torvalds. a trainer at GitHub, explains that Git, like other version control systems, manages and stores revisions of projects.</p>
 
           <p>It is mostly used for code, but it coudl be used to manage any other type of file. It can be compared to a filing system for every draft of a document.</p>
         </div>
 
          <div class="col-sm-6"> 
           <hr>
-          <p>Github is a Git repository hosting service, but it has many other features. Git is originally a command line tool, Github also provides a Web-based graphical interface alongside alot of other handy fetures.<p>
+          <p>Github is a Git repository hosting service, but it has many other features. Git is originally a command line tool, Github also provides a Web-based graphical interface alongside alot of other handy fetures.</p>
 
           <p>Perhaps most importantly, GitHub has become the biggest library for code examples. Since Git encourages granular recording of changes, programmers, be they absolute beginners or experts, can trace the steps of some of the greatest developers in the world and find out how they solved their problems.</p>
         </div>
         
-        <div style="text-align: center; margin-bottom: 10em">
+        <div id="bilderMain">
           <img src="img/git.png" alt="Git Logo"> 
           <img src="img/github.png" alt="GitHub Logo">
         </div>
-      
+        </div>
 
-        <div class="row">
-                <a href="Steg/youtube.php" type="button" class="btn btn-success btn-block" style="text-align: center; margin-top: 6em">Start</a>
+        <div class="row knapper">
+                <a href="Steg/youtube.php" type="button" class="btn btn-success btn-block">Start</a>
         </div>
       </div>
+
 
 
 
