--- a/html/git-commit.html
+++ b/html/git-commit.html
@@ -1,30 +1,3 @@
-<body>
-	<header class=navbar-default>
-	<div class="container-fluid">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	      <span class="sr-only">Toggle navigation</span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	    <a class="navbar-brand" href="#">Git E-learning</a>
-	  </div>
-
-	  	<!-- Collect the nav links, forms, and other content for toggling -->
-	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav">
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">add</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
-		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">commit<span class="sr-only">(current)</span></a></li>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
-	 	</div><!-- /.navbar-collapse -->
-	</header>  
-</body>
 
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
@@ -34,7 +7,7 @@
 
 		<p>Saving changes - git commit stores the current contents/snapshot of the index in a new commit along with a log message from the user describing the changes. Commited changes are "safe" snapshots of the project - Git will never change them unless ask it to.</p>
 
-		<p>Ex:</p>
+		<strong><em>In terminal type:</em></strong>
 		<pre>git commit -m "Added new file"</pre>
 
 		<p>Commit the staged snapshot, but instead of launching a text editor, use message to commit the message.</p>
