--- a/html/git-init.html
+++ b/html/git-init.html
@@ -1,31 +1,3 @@
-<body>
-	<header class=navbar-default>
-	<div class="container-fluid">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	      <span class="sr-only">Toggle navigation</span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	    <a class="navbar-brand" href="#">Git E-learning</a>
-	  </div>
-
-	  	<!-- Collect the nav links, forms, and other content for toggling -->
-	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav">
-		      <ul class="nav navbar-nav">
-		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">init<span class="sr-only">(current)</span></a></li>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">add</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">status</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
-	 	</div><!-- /.navbar-collapse -->
-	</header>  
-</body>
 
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
@@ -35,9 +7,10 @@
 		<p>"git init" is the first command for getting started with your very own repository.
 		When you type in this command in your command line interface you will create a repository in the directory you are currently in when pressing enter.</p>
 
-		<h4>Ex</h4>
+		<strong><em>To get started, type:</em></strong>
 
 		<pre>git init</pre>
+
 
 		<p>This will create a hidden file(.git) with all the basic information about your git repository will be stored.</p>
 		<p>You are now ready to start adding files to your repository.</p>
