--- a/html/git-status.html
+++ b/html/git-status.html
@@ -1,31 +1,3 @@
-<body>
-	<header class=navbar-default>
-	<div class="container-fluid">
-	  <!-- Brand and toggle get grouped for better mobile display -->
-	  <div class="navbar-header">
-	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	      <span class="sr-only">Toggle navigation</span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	      <span class="icon-bar"></span>
-	    </button>
-	    <a class="navbar-brand" href="#">Git E-learning</a>
-	  </div>
-
-	  	<!-- Collect the nav links, forms, and other content for toggling -->
-	  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		    <ul class="nav navbar-nav">
-		      <ul class="nav navbar-nav">
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">init</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">add</a>
-		      <li class="active" style="pointer-events: none; cursor: default;"><a href="#">status<span class="sr-only">(current)</span></a></li>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">commit</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">push</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">pull</a>
-		      <li><a style="pointer-events: none; cursor: default;" href="page.html">clone</a>
-	 	</div><!-- /.navbar-collapse -->
-	</header>  
-</body>
 
 <div class=container>
 	<?php include('../html/cssConsole.html'); ?>
@@ -35,7 +7,7 @@
 
 		<p>Once you have added files to your git repository you can check the status by typing git status.</p>
 		<p>The files you have created will then show up in red, this means they are not yet added to your repository. Files that show up as green means they are added but not yet commit'ed.</p>
-		<p>You can check status by writing:</p>
+		<strong><em>You can check status by writing:</em></strong>
 
 		<pre>git status</pre>
 		
