litt mer bugfix

--- a/html/cssConsole.html
+++ b/html/cssConsole.html
@@ -171,7 +171,7 @@ var commands = {
 		addLine("Initialized empty Git repository in /home/root/.git/");
 		addLine("<br> ", 'margin');
 		addLine("Step 2: Create a file and append some text to it.");
-		addLine('Type: echo "This is one line" >> test.txt');
+		addLine('<span class="notranslate">Type: echo "This is one line" >> test.txt</span>');
 	},
 
 	"git status": function (){
