--- a/html/git-add.html
+++ b/html/git-add.html
@@ -10,6 +10,6 @@
 		<p>Once you are finished editing your files you are ready to add them you your git repository.</p>
 		<p>This is done using the "git add" command.</p>
 		<strong><em>To continue, type:</em></strong>
-		<pre>git add test.txt 	/* adds the specified file */</pre>
+		<pre class="notranslate">git add test.txt 	/* adds the specified file */</pre>
 	</div>
 </div>
