--- a/html/git-clone.html
+++ b/html/git-clone.html
@@ -5,11 +5,10 @@
 		<h1>Git Clone</h1>
 		<hr>
 
-		<p>Now that you have made your own repository and have acuired mad skills, you might want to copy someone elses repository</p>
-		<p>You can do this by going to the location on your computer where you want to add the files. Then you go to <a href="https://github.com>">https://github.com</a> and find a project you wish to clone and copy that projects link.</p>
-		<p>If you want to copy this website you would write:</p>
+		<p>Now that you have made your own repository and have acuired mad skills, you might want to copy someone elses repository. You can do this by going to the location on your computer where you want to add the files. </p> <p> Then you go to <a href="https://github.com>">https://github.com</a> and find a project you wish to clone and copy that projects link.
+		If you want to copy this website you would write:</p>
 
-		<pre>git clone https://github.com/welearncodes/e-learning.git</pre>
+		<pre class="notranslate">git clone https://github.com/welearncodes/e-learning.git</pre>
 		
 		<p>This will copy the files to the location you picked out.</p>
 	</div>
