--- a/html/git-init.html
+++ b/html/git-init.html
@@ -9,10 +9,9 @@
 
 		<strong><em>To get started, type:</em></strong>
 
-		<pre>git init</pre>
+		<pre class="notranslate">git init</pre>
 
 
-		<p>This will create a hidden file(.git) with all the basic information about your git repository will be stored.</p>
-		<p>You are now ready to start adding files to your repository.</p>
+		<p>This will create a hidden file(.git) with all the basic information about your git repository will be stored. You are now ready to start adding files to your repository.</p>
 	</div>
 </div>
