--- a/html/git-push.html
+++ b/html/git-push.html
@@ -4,12 +4,10 @@
 		<div class="row">
 		<h1>Git Push</h1>
 		<hr>
-		<p>You will now have the ability to push your git repository to an external git provider. Most commenly used https://github.com. </p>
-		<p>You have to create an account and a new repository with the same name. </p>
-		<p>Once this is done you are ready to push your repository to the external provider.</p>
+		<p>You will now have the ability to push your git repository to an external git provider. Most commenly used https://github.com. You have to create an account and a new repository with the same name. Once this is done you are ready to push your repository to the external provider.</p>
 
 		<strong><em>You can try by typing:</em></strong>
-		<pre>git push</pre>
+		<pre class="notranslate">git push</pre>
 
 		</div>
 </div>
