--- a/html/git-status.html
+++ b/html/git-status.html
@@ -9,7 +9,7 @@
 		<p>The files you have created will then show up in red, this means they are not yet added to your repository. Files that show up as green means they are added but not yet commit'ed.</p>
 		<strong><em>You can check status by writing:</em></strong>
 
-		<pre>git status</pre>
+		<pre class="notranslate">git status</pre>
 		
 		<p>You can now see the file(s) you have added.</p>
 	</div>
