--- a/html/git-pull.html
+++ b/html/git-pull.html
@@ -5,11 +5,10 @@
 		<h1>Git Pull</h1>
 		<hr>
 
-		<p>When you have added your repositry to git you will have the option to pull changes. This comes in handy
-		when other colabirators have added code to your repository.</p>
+		<p>When you have added your repositry to git you will have the option to pull changes. This comes in handy when other colabirators have added code to your repository.</p>
 
 		<strong><em>Try this in terminal:</em></strong>
-		<pre>git pull</pre>
+		<pre class="notranslate">git pull</pre>
 
 		<p>The added code will the be merged with your files.</p>
 	</div>
